# pico-picom

./: .clang-tidy  History.md  README.md  meson.build  meson_options.txt
.builds/: freebsd.yml
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
man/: meson.build  picom.1.asciidoc
meson/: install.sh
src/: atom.h  common.h  config.c  config.h  event.c  log.c  meson.build  opengl.c  opengl.h  options.c  options.h  picom.c  picom.h  picom.modulemap  region.h  render.c  render.h  utils.h  vsync.c  win.c  win.h  win_defs.h  x.c  x.h
src/backend/: backend.c  backend.h  backend_common.c  backend_common.h  driver.h  meson.build
src/backend/dummy/: dummy.c
src/backend/gl/: gl_common.c  gl_common.h  glx.c  shaders.c
