option('with_docs', type: 'boolean', value: false, description: 'Build documentation and man pages')

option('modularize', type: 'boolean', value: false, description: 'Build with clang\'s module system')

option('profiling', type: 'boolean', value: true, description: 'Build with support for gprof')
